# v1-sdk

./: .dockerignore  .gitignore  Dockerfile  README.md  build_and_upload.sh  build_base_image.sh  example.py  flock_sdk.py  pyproject.toml  requirements.txt  setup.py
examples/: build_and_upload.sh  requirements.txt
examples/credit_card_fraud_detection/: Dockerfile  README.md  build_and_upload.sh  compare.py  data_preprocessing.py  example.py  pinata_api.py  requirements.txt  test_dgc.py  upload_image.sh
examples/fedllm/: Dockerfile  README.md  fedllm_example.py  requirements.txt
examples/flock_llm/: Dockerfile  FLockLLMFinetuneModel.py  GlobalModel_generated.py  README.md  arguments.py  build_and_upload.sh  build_and_upload_IPFS.sh  build_and_upload_S3.py  client.py  client_data_allocation.py  config.yaml  flock_llm_example.py  flock_sdk.py  global_model_host.py  main.py  pinata_api.py  requirements.txt  s3_storage_manager.py
examples/fresh_start_example/: Dockerfile  example.py  requirements.txt  upload_image.sh
examples/mobilenet/: mobilenet_example.py  mobilenet_v3.py
examples/mobilenet_example/: Dockerfile  build_and_upload.sh  mobilenet_example.py
examples/sentiment_analysis/: .env.example  Dockerfile  build_and_upload.sh  data_preprocessing.py  demo.py  example.py  requirements.txt
examples/test_creditcard/: requirements.txt  torch_example.py
examples/torch_example/: Dockerfile  build_and_upload.sh  build_archive.sh  torch_example.py
examples/visual_task/: README.md  dgc.py  main.py  (+2 more)
flock_sdk/: __init__.py  flock_model.py  flock_sdk.py
(+38 files in other folders)
